--- a/public/html/game.html
+++ b/public/html/game.html
@@ -34,7 +34,7 @@
         <div id="game-container">
           <button id="ready-btn">READY</button>
           <div id="timer" class="display-none">5</div>
-          <p id="text-container" class="display-none">Sample text</p>
+          <p id="text-container" class="display-none"></p>
           <div id="game-timer" class="display-none">
             <span id="game-timer-seconds">5</span>
             <span> seconds left</span>
